--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </header>
             <div class="deposit-30-hero-video-container">
-                <video class="deposit-30-hero-video" type="video/mp4" src="/img/Untitled.mp4" loop autoplay muted>
+                <video class="deposit-30-hero-video" type="video/mp4" src="./img/Untitled.mp4" loop autoplay muted>
                 </video>
             </div>
             <div role="banner" class="deposit-30-hero-gradient"></div>
