--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
     <main class="deposit-30">
         <section class="deposit-30-hero section-padding">
-
-            <!-- <div class="container">
+             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <header class="deposit-30-hero__header">
@@ -38,26 +37,7 @@
                         <img class="img-fluid d-xl-none d-lg-none d-md-block d-none" src="./img/30.png" alt="">
                     </div>
                 </div>
-            </div> -->
-
-
-
-            <header class="deposit-30-hero__header container">
-                <p class="deposit-30-hero__sub-title text-bold">30%</p>
-                <h1 class="deposit-30-hero__title">Deposit bonus</h1>
-                <p class="deposit-30-hero__text">Forex Deposit Bonus allows you to trade with additional
-                    margin, and is a free bonus just for making a deposit with us.</p>
-
-                <div class="deposit-30-hero__button-container">
-                    <a href="#" class="btn-base btn-base-small btn-green-red">gest started</a>
-                    <a href="#" class="btn-base btn-base-lg btn-red-outline">Login</a>
-                </div>
-            </header>
-            <div class="deposit-30-hero-video-container">
-                <video class="deposit-30-hero-video" type="video/mp4" src="./img/Untitled.mp4" loop autoplay muted>
-                </video>
-            </div>
-            <div role="banner" class="deposit-30-hero-gradient"></div>
+            </div> 
         </section>
 
         <section class="deposit-30-benefits container">
